# sync-vault

./: Makefile  Makefile.am  Makefile.toplevel  README  catarg.sh  configure.ac  sync-vault.spec  sync_vault.x  sync_vault_client_custom.c  sync_vault_server.c  sync_vault_svc.c  wait-for-file.c
updates/: Makefile  sync_vault.x  sync_vault_client.c  sync_vault_server.c  wait-for-file.c
